--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,9 @@
 .padding5{
     padding:10px;
 }
+.wordSpace10{
+    word-spacing: 10px;
+}
 .bold{
     font-weight: bold;
 }
@@ -306,4 +309,70 @@
      background-position: bottom;
      background-color: #440101;
      background-blend-mode: screen
+ }
+ #joinUs{
+     background-color: black;
+ }
+ .paddingtop10{
+     padding-top:20px;
+ }
+ .hrStyle1{
+    height:2px;
+    border-radius:5px;
+    background-color: white;
+    margin-bottom:15px;
+ }
+ .hrStyle1:after{
+     display : block;
+     position: relative;
+     content : 'I I I I I';
+     font-size: 28px;
+     color: white;
+     top:-20px;
+     text-align: center;
+ }
+ .helpingText{
+    display: flex;
+    padding-right: 10px;
+    align-items: center;
+    overflow-wrap: break-word;
+ }
+ .helpingBox{
+    box-shadow : 5px 5px 0px 0px black, 
+                10px 10px 5px 1px white;
+    border:1px solid white;
+    background-color: white;
+    border-radius:10px;
+    padding-top:40px;
+    min-height:250px;
+ }
+ #joinUsBtn,#DonateNowBtn,#AdoptNowBtn{
+    border-radius: 20px;
+    border:2px solid black;
+    background-color: transparent;
+    color:black;
+ }
+ #joinUsBtn:hover,#DonateNowBtn:hover,#AdoptNowBtn:hover{
+     background-color: black;
+     color:white;
+ }
+ .marginBotton30{
+    margin-bottom: 30px;
+ }
+ .paddingBottom50{
+    padding-bottom: 50px;
+ }
+ .paddingTop50{
+    padding-top: 50px;
+ }
+ .letterSpace1{
+     letter-spacing: 2px;
+ }
+ .helpingBoxTopContent{
+    display: flex;
+    color: black;
+    justify-content: space-around;
+ }
+ .padding20{
+    padding: 20px;
  }
