--- a/css/main.css
+++ b/css/main.css
@@ -367,6 +367,7 @@
     border-radius:10px;
     padding-top:40px;
     min-height:250px;
+    min-width: 230px;
  }
  #joinUsBtn,#DonateNowBtn,#AdoptNowBtn,#processBtn{
     border-radius: 20px;
@@ -434,3 +435,21 @@
     border-bottom-left-radius: 200px;
     box-shadow:0px 8px 5px 1px;
  }
+ #GalleryName{
+    animation : animateGlow 5s infinite;
+  }
+  @keyframes animateGlow
+  {
+    0%{
+      text-shadow : 0px 0px 10px greenyellow;
+    }
+    50%{
+      text-shadow : 0px 0px 25px #ef5350,
+                  10px 10px 100px #ef5350,
+                  20px 20px 200px #ef5350;
+    }
+    100%{
+      text-shadow : 0px 0px 25px greenyellow,
+                  10px 10px 100px #18ffff;
+    }
+  }
