--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,9 @@
  .paddingtop10{
      padding-top:20px;
  }
+ .padding15{
+     padding:15px;
+ }
  .hrStyle1{
     height:2px;
     border-radius:5px;
@@ -472,16 +475,13 @@
   }
   @keyframes smallFlip{
       0%{
-          transform: rotateZ(0deg);
+          transform: translateX(0px);
       }
-      40%{
-        transform: rotateZ(5deg);
-      }
-      80%{
-        transform: rotateZ(-5deg);
+      50%{
+        transform: translateX(15px)
       }
       100%{
-        transform: rotateZ(0deg);
+        transform: translateX(0px)
       }
   }
   #eventTabs a:nth-child(1){
