--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@
     border-radius: 30px;
 }
 .blackBackground{
-    background-color: black;
+    background-color: #0a2701;
 }
 .whiteText{
     color : white;
@@ -272,28 +272,6 @@
  #missionButton:hover{
      transform: translateX(10px);
  }
- @keyframes bendRight{
-     0%{
-        transform: rotate(0deg);
-     }
-     100%{
-        transform: rotate(5deg);
-     }
- }
- @keyframes bendLeft{
-    0%{
-       transform: rotate(0deg);
-    }
-    100%{
-       transform: rotate(-5deg);
-    }
-}
- .animateLeft:hover{
-    animation : bendRight 1s forwards;
-}
- .animateRight:hover{
-    animation : bendLeft 1s forwards;
-}
  @keyframes fadeIn{
      0%{
          opacity: 0;
@@ -341,7 +319,21 @@
      background-blend-mode: screen
  }
  #joinUs{
-     background-color: black;
+     background-image: url("../images/helpingHand1.jpg");
+     background-repeat: no-repeat;
+     background-size: cover;
+     background-attachment: fixed;
+     background-position: bottom;
+     position: relative;
+ }
+ #joinUs::before{
+    position: absolute;
+    top:0px;
+    height: 100%;
+    width: 100%;
+    content: '';
+    z-index: 1;
+    background-color: rgba(1,1,1,0.80);
  }
  .paddingtop10{
      padding-top:20px;
@@ -354,6 +346,8 @@
     border-radius:5px;
     background-color: white;
     margin-bottom:15px;
+    position: relative;
+    z-index: 2;
  }
  .hrStyle1:after{
      display : block;
@@ -363,6 +357,11 @@
      color: white;
      top:-20px;
      text-align: center;
+     z-index: 2;
+ }
+ .helpUs{
+     position: relative;
+     z-index: 2;
  }
  .helpingText{
     display: flex;
@@ -379,6 +378,8 @@
     padding-top:40px;
     min-height:250px;
     min-width: 230px;
+    position: relative;
+    z-index: 2;
  }
  #joinUsBtn,#DonateNowBtn,#AdoptNowBtn,#processBtn{
     border-radius: 20px;
@@ -386,9 +387,15 @@
     background-color: transparent;
     color:black;
  }
- #joinUsBtn:hover,#DonateNowBtn:hover,#AdoptNowBtn:hover,#processBtn:hover{
-     background-color: black;
+ #processBtn:hover{
+    border : 0px;
+    background-color: #004d40;
+    color: white;
+ }
+ #joinUsBtn:hover,#DonateNowBtn:hover,#AdoptNowBtn:hover{
+     background-color:black;
      color:white;
+     border : 0px;
  }
  .marginBotton30{
     margin-bottom: 30px;
@@ -398,6 +405,9 @@
  }
  .paddingBottom50{
     padding-bottom: 50px;
+ }
+ .paddingBottom100{
+    padding-bottom: 100px;
  }
  .paddingTop50{
     padding-top: 50px;
@@ -420,7 +430,7 @@
     border-top-left-radius: 200px;
     box-shadow:5px -5px 5px 1px;
     border-top-right-radius: 200px;
-    margin-left:-7px;
+    /* margin-left:-7px; */
  }
  .ourProcessContentProps{
     text-align:left;
@@ -500,3 +510,66 @@
     animation : smallFlip 5s infinite;
     animation-delay: 2s;
   }
+  @keyframes sliderAnimation{
+      0%{
+        width : 0%;
+      }
+      100%{
+        width : 60%;
+      }
+  }
+  .divSlider{
+      animation : sliderAnimation 1.5s forwards;
+  }
+  #ourProcessList{
+      min-height: 230px;
+  }
+  #ourProcessList > .ourProcessListItem{
+    font-size: 18px;
+    font-weight: 300;
+    padding:10px;
+  }
+  #ourProcessList > .ourProcessListItem::before{
+    content : ' ';
+    background-image: url("../images/yellow-flower.png");
+    background-size: 30px 30px;
+    height: 30px;
+    width: 30px;
+    display: inline-block;
+    top: 7px;
+    position: relative;
+  }
+  .alcatel{
+    max-width: 440px;
+    min-width: 350px;
+  }
+  .customCenter{
+      display: flex;
+      justify-content: center;
+  }
+  .hrStyle2{
+    height:3px;background-color: #2ecc40;
+  }
+  @keyframes animateRotateLeft{
+      0%{
+          transform: rotateZ(20deg);
+      }
+      100%{
+        transform: rotateZ(0deg);
+      }
+  }
+  .rotateleft{
+      animation: animateRotateLeft 2s forwards;
+  }
+  @keyframes animateRotateRight{
+    0%{
+        transform: rotateZ(-20deg);
+    }
+    100%{
+      transform: rotateZ(0deg);
+    }
+}
+.rotateRight{
+    animation: animateRotateRight 2s forwards;
+}
+  
