--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,9 @@
 .margintop10{
     margin-top:10px;
 }
+.margintop70{
+    margin-top:70px;
+}
 .padding5{
     padding:10px;
 }
@@ -257,7 +260,7 @@
     padding:5px;
     border:2px solid #2ecc40;
     border-spacing:3px;
-    box-shadow:0px 0px 0px 5px white;
+    box-shadow:0px 0px 0px 7px white;
  }
  .cardTextContainer{
     display: flex;
@@ -316,7 +319,7 @@
      background-attachment: fixed;
      background-position: bottom;
      background-color: #440101;
-     background-blend-mode: screen
+     background-blend-mode: screen;
  }
  #joinUs{
      background-image: url("../images/helpingHand1.jpg");
@@ -457,7 +460,8 @@
     box-shadow:0px 8px 5px 1px;
  }
  #GalleryName{
-    animation : animateGlow 5s infinite;
+     z-index: 1;
+    /* animation : animateGlow 5s infinite; */
   }
   @keyframes animateGlow
   {
@@ -571,5 +575,69 @@
 }
 .rotateRight{
     animation: animateRotateRight 2s forwards;
+}
+#galleryContainer{
+    background-image: url("../images/gallerybackground1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    height:900px;
+}
+#galleryContainer::before{
+    background-color: rgba(1,1,1,0.80);
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top:0px;
+}
+.relative{
+    position: relative;
+}
+@keyframes randomAnime1{
+    0%{
+        transform: translate(0px,0px);
+    }
+    30%{
+        transform: translate(5px,3px) rotateZ(10deg);
+    }
+    50%{
+        transform: translate(-4px,6px);
+    }
+    100%{
+        transform: translate(0px,0px);
+    }
+}
+.randomAnimation1{
+    animation : randomAnime1 10s infinite forwards;
+}
+@keyframes randomAnime2{
+    0%{
+        transform: translate(0px,0px);
+    }
+    30%{
+        transform: translate(-5px,8px) rotateZ(-10deg);
+    }
+    50%{
+        transform: translate(8px,16px);
+    }
+    100%{
+        transform: translate(0px,0px);
+    }
+}
+.randomAnimation2{
+    animation : randomAnime2 10s infinite forwards;
+}
+@keyframes move{
+    0%{
+        transform: translateX(0px);
+    }
+    100%{
+        transform: translateX(10px) rotate(40deg);
+    }
+}
+.movement{
+    animation : move 2s forwards;
 }
   
